# auto-asl

./: .env  .gitignore  README.md  combined_data.json  combined_data_backup.json  create_final_video.ipynb  english_tutorial.json  main.py  obama.json  pyproject.toml  run.py  sign_video_bank.ipynb  simone_biles.json  streamlit_app.py  streamlit_interface.ipynb  utils.py
extract_speaker_videos/: README.md  extract_asl_speaker_video.py
transcripts/: 4BH611j0slg_transcript.json  S0P3hjM0DDM_transcript.json
