[tool.poetry]
name = "auto-asl"
version = "0.1.0"
description = ""
authors = ["Jonathan Talmi <jtalmi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
