[tool.poetry]
name = "auto-asl"
version = "0.1.0"
description = ""
authors = ["Jonathan Talmi <jtalmi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
kaggle = "^1.6.17"
pyngrok = "^7.2.0"
streamlit = "^1.37.0"
yt-dlp = "^2024.8.1"
python-dotenv = "^1.0.1"
anthropic = "^0.32.0"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
